2019-05-08	Justin Collier	<jpcxist@gmail.com>
	* Makefile: Fixed spacing.
	* README.md: Fixed ccutl::types::const_copyable_t description.
	Bumped version to 0.4.1.

2019-05-07	Justin Collier	<jpcxist@gmail.com>

	* cpputils: Reverted directory structure change.
	src/ccutl/maps.h -> src/ccutl/maps/maps.h
	src/ccutl/types.h -> src/ccutl/types/types.h

	* src/ccutl/maps/maps.h: Added maps::create method.

	* src/ccutl/types/types.h: Changed "types::const_ref_or_v" to "types::const_copyable_t".
	(types::const_copyable_v): Changed logic from is_pointer_v || is_fundamental_v to is_trivially_copyable_v.

	* src/ccutl_tests/maps/test.h: Changed testing method to template-called type tests.

	* src/ccutl_tests/maps/test.cc: Added permutational calls to template testing functions.
	Added tests for maps::create.

	* ChangeLog: Fixed entry ordering.

	* README.md: Updated README to reflect changes for 0.4.0.

2019-05-05	Justin Collier	<jpcxist@gmail.com>

	*	cpputils: Changed folder structure; moved namespace-only header files out of namespace directories.
	src/ccutl/maps/maps.h -> src/ccutl/maps.h

	* src/ccutl/maps.h: Canged template specialization to parameter specialization.

	* src/ccutl/types.h: Created file.

	* src/ccutl_tests/maps/test.cc: Added tests for ccutl::maps::has.

	* src/ccutl_tests/maps/test.h: Added test variables for ccutl::maps::has.

	* Makefile: Fixed make test error.

	* README.md: Updated README to reflect changes for 0.3.0.
	Added code ticks to section headers.
	"aid in" -> "facilitate"

2019-05-04	Justin Collier	<jpcxist@gmail.com>

	* cpputils: Changed namespace configuration.

	* src/ccutl/maps/maps.h: Included type_traits. Changed function naming scheme.
	(has, get): Improved template specialization for const char * cases.

	* src/ccutl/testgroup.h: Created file.

	* test/src/ccutl_tests/maps/test.cc: Created file.

	* test/src/ccutl_tests/maps/test.h: Created file.

	* Makefile: Created Makefile for testing ("make test").
